--- a/dbcreation/src/main/webapp/entry/entry.xhtml
+++ b/dbcreation/src/main/webapp/entry/entry.xhtml
@@ -7,60 +7,82 @@
 <h:head>
 	<!-- This can be located either in the facelet or in external js file-->
 	<script>
-	   
 		function showPO() {
-			if(PF('serviceType').getSelectedValue() == "PAID") {
-				 PF('txtPoNum').jq.removeAttr("disabled");
-				 PF('txtPoNum').jq.attr("class","ui-inputfield ui-inputtext ui-widget " +
-						 "ui-state-default ui-corner-all inputTextWidth");
-				 $("[id='tabMain:frmData:calPoDate_input']").removeAttr("disabled");
-				 $("[id='tabMain:frmData:calPoDate_input']").attr("aria-disabled", "false");
-				 $("[id='tabMain:frmData:calPoDate_input']").attr("class","ui-inputfield ui-widget ui-state-default ui-corner-all hasDatepicker");
-			} else {
-		        PF('txtPoNum').jq.attr("disabled", "true");
+			if (PF('serviceType').getSelectedValue() == "PAID") {
+				PF('txtPoNum').jq.removeAttr("disabled");
 				PF('txtPoNum').jq
-						.attr("class","ui-inputfield ui-inputtext ui-widget "
+						.attr(
+								"class",
+								"ui-inputfield ui-inputtext ui-widget "
+										+ "ui-state-default ui-corner-all inputTextWidth");
+				$("[id='tabMain:frmData:calPoDate_input']").removeAttr(
+						"disabled");
+				$("[id='tabMain:frmData:calPoDate_input']").attr(
+						"aria-disabled", "false");
+				$("[id='tabMain:frmData:calPoDate_input']")
+						.attr("class",
+								"ui-inputfield ui-widget ui-state-default ui-corner-all hasDatepicker");
+			} else {
+				PF('txtPoNum').jq.attr("disabled", "true");
+				PF('txtPoNum').jq
+						.attr(
+								"class",
+								"ui-inputfield ui-inputtext ui-widget "
 										+ "ui-state-default ui-corner-all ui-state-disabled inputTextWidth");
 				PF('txtPoNum').jq.val("");
 
-				$("[id='tabMain:frmData:calPoDate_input']").attr("disabled","true");
-				$("[id='tabMain:frmData:calPoDate_input']").attr("class","ui-inputfield ui-widget ui-state-default ui-corner-all ui-state-disabled");
+				$("[id='tabMain:frmData:calPoDate_input']").attr("disabled",
+						"true");
+				$("[id='tabMain:frmData:calPoDate_input']")
+						.attr("class",
+								"ui-inputfield ui-widget ui-state-default ui-corner-all ui-state-disabled");
 				$("[id='tabMain:frmData:calPoDate_input']").val("");
 			}
 
 		}
-		$( document ).ready(function() {
-			$("[id='tabMain:frmData:calPoDate_input']").attr("disabled","true");
-			$("[id='tabMain:frmData:calPoDate_input']").attr("class","ui-inputfield ui-widget ui-state-default ui-corner-all ui-state-disabled");
-		});
-		
+		$(document)
+				.ready(
+						function() {
+							$("[id='tabMain:frmData:calPoDate_input']").attr(
+									"disabled", "true");
+							$("[id='tabMain:frmData:calPoDate_input']")
+									.attr("class",
+											"ui-inputfield ui-widget ui-state-default ui-corner-all ui-state-disabled");
+						});
 	</script>
 </h:head>
 <h:form id="frmData">
 	<div style="width: 100%">
-		<p:panelGrid id="pnlData" columns="4" style="width: 80%;border:none;margin: 0 auto">
+		<p:panelGrid id="pnlData" columns="4"
+			style="width: 80%;border:none;margin: 0 auto">
 			<h:outputText value="Organisation Name" styleClass="inputTextWidth" />
 			<p:inputText styleClass="inputTextWidth"></p:inputText>
 			<h:outputText value="Type Of Service" styleClass="inputTextWidth" />
-			<p:selectOneMenu id="console" style="width:225px" widgetVar="serviceType" onchange="showPO()">
+			<p:selectOneMenu id="console" style="width:225px"
+				widgetVar="serviceType" onchange="showPO()">
 				<f:selectItem itemLabel="ECS" itemValue="ECS" />
 				<f:selectItem itemLabel="POC" itemValue="POC" />
 				<f:selectItem itemLabel="PAID" itemValue="PAID" />
 			</p:selectOneMenu>
 			<p:outputLabel value="PO Number" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth" widgetVar="txtPoNum" disabled="true" ></p:inputText>
+			<p:inputText styleClass="inputTextWidth" widgetVar="txtPoNum"
+				disabled="true"></p:inputText>
 			<h:outputText value="PO Date" styleClass="inputTextWidth" />
-			<p:calendar size="48" id="calPoDate"  readonlyInput="true" pattern="dd/MM/yyyy"   />
+			<p:calendar size="48" id="calPoDate" readonlyInput="true"
+				pattern="dd/MM/yyyy" />
 			<h:outputText value="Location" styleClass="inputTextWidth" />
 			<p:inputText styleClass="inputTextWidth"></p:inputText>
 			<h:outputText value="Account Manager" styleClass="inputTextWidth" />
 			<p:inputText styleClass="inputTextWidth"></p:inputText>
 			<h:outputText value="Start Date" styleClass="inputTextWidth" />
-			<p:calendar id="calStartDate"  readonlyInput="true" pattern="dd/MM/yyyy" size="48"/>
+			<p:calendar id="calStartDate" readonlyInput="true"
+				pattern="dd/MM/yyyy" size="48" />
 			<h:outputText value="End Date" styleClass="inputTextWidth" />
-			<p:calendar id="calEndDate"  readonlyInput="true" pattern="dd/MM/yyyy" size="48" />
+			<p:calendar id="calEndDate" readonlyInput="true" pattern="dd/MM/yyyy"
+				size="48" />
 			<h:outputText value="Shut Down date" styleClass="inputTextWidth" />
-			<p:calendar id="calShutDate"  readonlyInput="true" pattern="dd/MM/yyyy" size="48" />
+			<p:calendar id="calShutDate" readonlyInput="true"
+				pattern="dd/MM/yyyy" size="48" />
 			<h:outputText value="Vm Name" styleClass="inputTextWidth" />
 			<p:inputText styleClass="inputTextWidth" />
 			<h:outputText value="Vcpu" styleClass="inputTextWidth" />
@@ -78,7 +100,12 @@
 			<h:outputText value="Mobile No" styleClass="inputTextWidth" />
 			<p:inputText styleClass="inputTextWidth" />
 			<h:outputText value="Email" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth" />
+			<p:inputText styleClass="inputTextWidth"
+				requiredMessage="Please enter your email address."
+				validatorMessage="Invalid email format">
+				<f:validateRegex
+					pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
+			</p:inputText>
 
 		</p:panelGrid>
 
