--- a/dbcreation/src/main/webapp/entry/entry.xhtml
+++ b/dbcreation/src/main/webapp/entry/entry.xhtml
@@ -7,8 +7,9 @@
 <h:head>
 	<!-- This can be located either in the facelet or in external js file-->
 	<script>
-		function showPO() {
-			if (PF('serviceType').getSelectedValue() == "PAID") {
+		function showPO(value) {
+			
+			if (value == "PAID") {
 				PF('txtPoNum').jq.removeAttr("disabled");
 				PF('txtPoNum').jq
 						.attr(
@@ -56,56 +57,89 @@
 		<p:panelGrid id="pnlData" columns="4"
 			style="width: 80%;border:none;margin: 0 auto">
 			<h:outputText value="Organisation Name" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth"></p:inputText>
+			<p:inputText styleClass="inputTextWidth" tabindex="1"></p:inputText>
 			<h:outputText value="Type Of Service" styleClass="inputTextWidth" />
-			<p:selectOneMenu id="console" style="width:225px"
-				widgetVar="serviceType" onchange="showPO()">
-				<f:selectItem itemLabel="ECS" itemValue="ECS" />
-				<f:selectItem itemLabel="POC" itemValue="POC" />
-				<f:selectItem itemLabel="PAID" itemValue="PAID" />
-			</p:selectOneMenu>
+			<p:panel style="border:none">
+				<p:selectOneMenu id="console" style="width:100px;float:left"
+					widgetVar="serviceType"  tabindex="11">
+					<f:selectItem itemLabel="" itemValue="" />
+					<f:selectItem itemLabel="ECS" itemValue="ECS" />
+					<f:selectItem itemLabel="IV" itemValue="IV" />
+					<f:selectItem itemLabel="OPDC" itemValue="OPDC" />
+					<f:selectItem itemLabel="HDDC" itemValue="HDDC" />
+				</p:selectOneMenu>
+				<p:selectOneRadio id="serviceType" style="width:120px;float:left" widgetVar="payType"
+						onchange="showPO(this.value)" tabindex="12">
+					<f:selectItem itemLabel="POC" itemValue="POC"  />
+					<f:selectItem itemLabel="PAID" itemValue="PAID" />
+					
+				</p:selectOneRadio>
+
+			</p:panel>
+			
+			<h:outputText value="Contact Name" styleClass="inputTextWidth" />
+			<p:inputText styleClass="inputTextWidth" tabindex="2"/>
+
 			<p:outputLabel value="PO Number" styleClass="inputTextWidth" />
 			<p:inputText styleClass="inputTextWidth" widgetVar="txtPoNum"
-				disabled="true"></p:inputText>
-			<h:outputText value="PO Date" styleClass="inputTextWidth" />
-			<p:calendar size="48" id="calPoDate" readonlyInput="true"
-				pattern="dd/MM/yyyy" />
-			<h:outputText value="Location" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth"></p:inputText>
-			<h:outputText value="Account Manager" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth"></p:inputText>
-			<h:outputText value="Start Date" styleClass="inputTextWidth" />
-			<p:calendar id="calStartDate" readonlyInput="true"
-				pattern="dd/MM/yyyy" size="48" />
-			<h:outputText value="End Date" styleClass="inputTextWidth" />
-			<p:calendar id="calEndDate" readonlyInput="true" pattern="dd/MM/yyyy"
-				size="48" />
-			<h:outputText value="Shut Down date" styleClass="inputTextWidth" />
-			<p:calendar id="calShutDate" readonlyInput="true"
-				pattern="dd/MM/yyyy" size="48" />
-			<h:outputText value="Vm Name" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth" />
-			<h:outputText value="Vcpu" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth" />
-			<h:outputText value="Vram" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth" />
-			<h:outputText value="VHdd" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth" />
-			<h:outputText value="Private Ip" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth" />
-			<h:outputText value="Public IP" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth" />
-			<h:outputText value="Contact Name" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth" />
-			<h:outputText value="Mobile No" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth" />
+				disabled="true" tabindex="13"></p:inputText>
 			<h:outputText value="Email" styleClass="inputTextWidth" />
-			<p:inputText styleClass="inputTextWidth"
+			<p:inputText styleClass="inputTextWidth" tabindex="3" 
 				requiredMessage="Please enter your email address."
 				validatorMessage="Invalid email format">
 				<f:validateRegex
 					pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
 			</p:inputText>
+			
+			<h:outputText value="PO Date" styleClass="inputTextWidth" />
+			<p:calendar size="45" id="calPoDate" readonlyInput="true"
+				pattern="dd/MM/yyyy" tabindex="14"/>
+			<h:outputText value="Mobile No" styleClass="inputTextWidth"  />
+			<p:inputText styleClass="inputTextWidth" tabindex="4"/>
+			
+			
+			<h:outputText value="Account Manager" styleClass="inputTextWidth" />
+			<p:inputText styleClass="inputTextWidth" tabindex="15"></p:inputText>
+			
+			<h:outputText value="Location" styleClass="inputTextWidth" />
+			<p:inputText styleClass="inputTextWidth" tabindex="5"/>
+			
+			<h:outputText value="Vm Name" styleClass="inputTextWidth" />
+			<p:inputText styleClass="inputTextWidth" tabindex="16"/>
+			
+			<h:outputText value="Start Date" styleClass="inputTextWidth" />
+			<p:calendar id="calStartDate" readonlyInput="true"
+				pattern="dd/MM/yyyy" size="46" tabindex="6"/>
+			<h:outputText value="Vram" styleClass="inputTextWidth" />
+			<p:inputText styleClass="inputTextWidth" tabindex="17"/>
+			
+			<h:outputText value="End Date" styleClass="inputTextWidth" />
+			<p:calendar id="calEndDate" readonlyInput="true" pattern="dd/MM/yyyy"
+				size="46" tabindex="7"/>
+			<h:outputText value="Vcpu" styleClass="inputTextWidth" />
+			<p:inputText styleClass="inputTextWidth" tabindex="18"/>
+			
+			<h:outputText value="Shut Down date" styleClass="inputTextWidth" />
+			<p:calendar id="calShutDate" readonlyInput="true"
+				pattern="dd/MM/yyyy" size="46" tabindex="8"/>
+			
+			
+			
+			<h:outputText value="VHdd" styleClass="inputTextWidth" />
+			<p:inputText styleClass="inputTextWidth" tabindex="19"/>
+			
+			<h:outputText value="Private Ip" styleClass="inputTextWidth" />
+			<p:inputMask styleClass="inputTextWidth"  mask="999.999.999.999" tabindex="9"/>
+			
+			<h:outputText value="Remarks" styleClass="inputTextWidth" />
+			<p:inputTextarea styleClass="inputTextWidth" tabindex="20"/>
+			
+			<h:outputText value="Public IP" styleClass="inputTextWidth" />
+			<p:inputMask styleClass="inputTextWidth"  mask="999.999.999.999" tabindex="10"/>
+			
+			
+			
+			
 
 		</p:panelGrid>
 
