--- a/dbcreation/src/main/webapp/home.xhtml
+++ b/dbcreation/src/main/webapp/home.xhtml
@@ -1,10 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
-<ui:composition template="/template/layout.xhtml">
+	xmlns:p="http://primefaces.org/ui"
+    template="/template/layout.xhtml">
 	<ui:define name="content">
 		<p:tabView id="tabMain"
 			style="width:98%; margin:0 auto;min-height: 98%;height: auto;">
@@ -18,7 +17,10 @@
 				<ui:include src="admin/managerdetails.xhtml"/>
 			</p:tab>
 		</p:tabView>
-
+		<p:dialog header="Progress" widgetVar="dlgShow" modal="true" showEffect="explode" hideEffect="bounce" 
+			height="100" width="200" appendTo="@(body)" closable="false">
+			<p:graphicImage value="images/ajax-loader.gif" />
+		</p:dialog>
 	</ui:define>
+	
 </ui:composition>
-</html>
