--- a/dbcreation/src/main/webapp/admin/managerdetails.xhtml
+++ b/dbcreation/src/main/webapp/admin/managerdetails.xhtml
@@ -3,17 +3,20 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
-	
-	<h:form>
-		<p:fieldset legend="Manager Details">
-			<p:panelGrid columns="7" style="width: 50%;" id="pnlManager">
+
+
+	<p:fieldset legend="Manager Details" id="managerFields">
+		<h:form id="frmManagers">
+			<p:growl id="growlManager" showDetail="true" />
+			<p:panelGrid columns="8" style="width: 100%;" id="pnlManager">
 				<h:outputText value="Name" styleClass="inputTextWidth" />
 				<p:inputText styleClass="inputTextWidth"
-					value="#{managerBean.manager.name}" />
+					value="#{managerBean.manager.name}" tabindex="1" />
 
 				<h:outputText value="Mobile" styleClass="inputTextWidth" />
 				<p:inputText styleClass="inputTextWidth"
-					value="#{managerBean.manager.mobile}" />
+					value="#{managerBean.manager.mobile}" tabindex="2" />
+
 				<h:outputText value="Email" styleClass="inputTextWidth" />
 				<p:inputText styleClass="inputTextWidth" tabindex="3"
 					requiredMessage="Please enter your email address."
@@ -22,18 +25,57 @@
 					<f:validateRegex
 						pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
 				</p:inputText>
-				<p:panel style="border:none;width:230px">
-					<p:commandButton value="Submit" id="btnSaveManager"
-						onstart="PF('dlgShow').show()" update="@form:pnlManager"
-						oncomplete="PF('dlgShow').hide()"
-						action="#{managerBean.saveManager}" />
-					<p:commandButton value="Reset" />
-					<p:commandButton value="View All" />
-				</p:panel>
-			</p:panelGrid>
 
-		</p:fieldset>
-	
-</h:form>
+				<h:outputText value="Location" styleClass="inputTextWidth" />
+				<p:inputText styleClass="inputTextWidth" tabindex="4"
+					value="#{managerBean.manager.location}" />
+
+
+			</p:panelGrid>
+			<p:panel style="border:none;">
+				<p:commandButton value="Submit" id="btnSaveManager"
+					onstart="PF('dlgShow').show()"
+					update="@form:pnlManager,growlManager"
+					oncomplete="PF('dlgShow').hide()"
+					action="#{managerBean.saveManager}" />
+				<p:commandButton value="Reset" />
+				
+			</p:panel>
+		</h:form>
+		<h:form>
+		<p:commandButton value="View All" onstart="PF('dlgShow').show()"
+					oncomplete="PF('dlgShow').hide()" partialSubmit="true"
+					update="tabMain:managerFields"
+					action="#{managerBean.loadAllManagers}" />
+			<h:outputText value="#{managerBean.displayManagers}"></h:outputText>
+			<p:panel id="pnlTblManagers" toggleable="true" collapsed="true"
+				visible="#{managerBean.displayManagers}" 
+				toggleOrientation="horizontal">
+				<!-- <p:ajax event="toggle" listener="#{managerBean.loadAllManagers}" update="tabMain:managerFields" /> -->
+				<p:dataTable var="manager" value="#{managerBean.listManagers}"
+					rows="10" paginator="true"
+					paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+					rowsPerPageTemplate="5,10,15">
+					
+					<p:column headerText="Name">
+						<h:outputText value="#{manager.name}" />
+					</p:column>
+
+					<p:column headerText="Contact">
+						<h:outputText value="#{manager.mobile}" />
+					</p:column>
+
+					<p:column headerText="Email">
+						<h:outputText value="#{manager.email}" />
+					</p:column>
+					<p:column headerText="location">
+						<h:outputText value="#{manager.location}" />
+					</p:column>
+				</p:dataTable>
+			</p:panel>
+			</h:form>
+	</p:fieldset>
+
+
 </ui:composition>
 
