--- a/dbcreation/src/main/webapp/admin/managerdetails.xhtml
+++ b/dbcreation/src/main/webapp/admin/managerdetails.xhtml
@@ -35,7 +35,7 @@
 			<p:panel style="border:none;">
 				<p:commandButton value="Submit" id="btnSaveManager"
 					onstart="PF('dlgShow').show()"
-					update="@form:pnlManager,growlManager"
+					update="tabMain:managerFields"
 					oncomplete="PF('dlgShow').hide()"
 					action="#{managerBean.saveManager}" />
 				<p:commandButton value="Reset" />
@@ -43,20 +43,15 @@
 			</p:panel>
 		</h:form>
 		<h:form>
-		<p:commandButton value="View All" onstart="PF('dlgShow').show()"
-					oncomplete="PF('dlgShow').hide()" partialSubmit="true"
-					update="tabMain:managerFields"
-					action="#{managerBean.loadAllManagers}" />
-			<h:outputText value="#{managerBean.displayManagers}"></h:outputText>
-			<p:panel id="pnlTblManagers" toggleable="true" collapsed="true"
-				visible="#{managerBean.displayManagers}" 
+			<p:panel id="pnlTblManagers" toggleable="true" collapsed="#{!managerBean.displayManagers}" header="Managers"
 				toggleOrientation="horizontal">
-				<!-- <p:ajax event="toggle" listener="#{managerBean.loadAllManagers}" update="tabMain:managerFields" /> -->
-				<p:dataTable var="manager" value="#{managerBean.listManagers}"
-					rows="10" paginator="true"
+				<p:ajax event="toggle" listener="#{managerBean.onToggle}" update="tabMain:managerFields" onstart="PF('dlgShow').show()" oncomplete="PF('dlgShow').hide()" />
+				<p:dataTable var="manager" value="#{managerBean.listManagers}" selectionMode="single"  rowKey="#{manager.id}"
+					rows="10" paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false"
 					paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 					rowsPerPageTemplate="5,10,15">
 					
+					<p:ajax event="rowSelect" listener="#{managerBean.onRowSelect}" update="tabMain:managerFields" />
 					<p:column headerText="Name">
 						<h:outputText value="#{manager.name}" />
 					</p:column>
