--- a/dbcreation/src/main/webapp/home.xhtml
+++ b/dbcreation/src/main/webapp/home.xhtml
@@ -20,9 +20,9 @@
 			</p:tab>
 		</p:tabView>
 		<p:dialog header="Progress" widgetVar="dlgShow" modal="true"
-			showEffect="explode" hideEffect="bounce" height="100" width="200"
+			 height="100" width="300"
 			appendTo="@(body)" closable="false">
-			<p:graphicImage value="images/ajax-loader.gif" />
+			<p:graphicImage value="images/ajax-loader.gif" style="0 auto" />
 		</p:dialog>
 	</ui:define>
 
