Manager Updation request completed

--- a/dbcreation/src/main/webapp/admin/managerdetails.xhtml
+++ b/dbcreation/src/main/webapp/admin/managerdetails.xhtml
@@ -7,18 +7,18 @@
 
 	<p:fieldset legend="Manager Details" id="managerFields">
 		<h:form id="frmManagers">
-			<p:growl id="growlManager" showDetail="true" />
+			<p:growl id="growlManager" showDetail="true"  />
 			<p:panelGrid columns="8" style="width: 100%;" id="pnlManager">
 				<h:outputText value="Name" styleClass="inputTextWidth" />
-				<p:inputText styleClass="inputTextWidth"
+				<p:inputText styleClass="inputTextWidth" required="true" requiredMessage="Please enter name"
 					value="#{managerBean.manager.name}" tabindex="1" />
 
-				<h:outputText value="Mobile" styleClass="inputTextWidth" />
-				<p:inputText styleClass="inputTextWidth"
+				<h:outputText value="Contact" styleClass="inputTextWidth" />
+				<p:inputText styleClass="inputTextWidth" required="true" requiredMessage="Please enter Contact"
 					value="#{managerBean.manager.mobile}" tabindex="2" />
 
 				<h:outputText value="Email" styleClass="inputTextWidth" />
-				<p:inputText styleClass="inputTextWidth" tabindex="3"
+				<p:inputText styleClass="inputTextWidth" tabindex="3" required="true"
 					requiredMessage="Please enter your email address."
 					value="#{managerBean.manager.email}"
 					validatorMessage="Invalid email format">
@@ -27,27 +27,26 @@
 				</p:inputText>
 
 				<h:outputText value="Location" styleClass="inputTextWidth" />
-				<p:inputText styleClass="inputTextWidth" tabindex="4"
+				<p:inputText styleClass="inputTextWidth" tabindex="4" required="true" requiredMessage="Please enter location"
 					value="#{managerBean.manager.location}" />
 
 
 			</p:panelGrid>
 			<p:panel style="border:none;">
 				<p:commandButton value="Submit" id="btnSaveManager"
-					onstart="PF('dlgShow').show()"
-					update="tabMain:managerFields"
-					oncomplete="PF('dlgShow').hide(), PF('pnlTblManagers').collapse()"
+					onstart="PF('dlgShow').show()" 
+					update="growlManager"
+					oncomplete="PF('dlgShow').hide(),PF('pnlTblManagers').toggle()"
 					action="#{managerBean.saveManager}" />
 				<p:commandButton value="Reset" />
 				
 			</p:panel>
 		</h:form>
 		<h:form id="frmManagersView">
-		
-	
-			<p:panel id="pnlTblManagers" toggleable="true" widgetVar="pnlTblManagers" collapsed="true" header="Managers"
-				toggleOrientation="horizontal">
-				<p:ajax event="toggle" listener="#{managerBean.onToggle}" update="tabMain:managerFields" onstart="PF('dlgShow').show()" oncomplete="PF('dlgShow').hide()" />
+		<p:growl id="growlManager" showDetail="true"  />
+			<p:panel  toggleable="true" widgetVar="pnlTblManagers" collapsed="true" header="Managers" 
+				toggleOrientation="horizontal" >
+				<p:ajax event="toggle" listener="#{managerBean.onToggle}" update="tabMain:frmManagers:pnlManager" onstart="PF('dlgShow').show()" oncomplete="PF('dlgShow').hide()" />
 				<p:dataTable var="manager" value="#{managerBean.listManagers}" selectionMode="single"  rowKey="#{manager.id}"
 					rows="10" paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false"
 					paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
