--- a/dbcreation/src/main/webapp/home.xhtml
+++ b/dbcreation/src/main/webapp/home.xhtml
@@ -13,7 +13,7 @@
 			 </p:tab>
 			
 			<p:tab title="search">
-
+				<ui:include src="search/search.xhtml" />
 			</p:tab>
 			<p:tab title="Admin">
 				<ui:include src="admin/managerdetails.xhtml" />
