water mark search

--- a/dbcreation/src/main/webapp/search/search.xhtml
+++ b/dbcreation/src/main/webapp/search/search.xhtml
@@ -8,12 +8,14 @@
 			<p:growl id="growlSearch" showDetail="true"  />
 			<p:panel  style="width: 40%; margin: 0 auto; border:none"  id="pnlSearchText">
 				<p:inputText  style="width:400px; height: 20px;" required="true" requiredMessage="Please enter name"
-					tabindex="1" />
+					tabindex="1" id="txtSearch"/>
+				<p:watermark value="Search" for="txtSearch"/>
 				<p:commandButton value="Submit" id="btnSearch" style="margin-left:10px"
 					onstart="PF('dlgShow').show()" 
 					update="growlSearch"
 					oncomplete="PF('dlgShow').hide(),PF('pnlTblManagers').toggle()"
 					/>
+					
 					
 			</p:panel>
 			
