--- a/dbcreation/src/main/webapp/search/search.xhtml
+++ b/dbcreation/src/main/webapp/search/search.xhtml
@@ -4,34 +4,32 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 
-		<h:form id="frmSearch">
-			<p:growl id="growlSearch" showDetail="true"  />
-			<p:panel  style="width: 40%; margin: 0 auto; border:none"  id="pnlSearchText">
-				<p:inputText  style="width:400px; height: 20px;" required="true" requiredMessage="Please enter name"
-					tabindex="1" id="txtSearch"/>
-				<p:watermark value="Search" for="txtSearch"/>
-				<p:commandButton value="Submit" id="btnSearch" style="margin-left:10px"
-					onstart="PF('dlgShow').show()" 
-					update="growlSearch"
-					oncomplete="PF('dlgShow').hide(),PF('pnlTblManagers').toggle()"
-					/>
-					
-					
-			</p:panel>
-			
-			<p:outputPanel  style="width: 40%; margin: 0 auto;border:none" id="pnlSearchInput">
-				<p:selectOneRadio>
-					<f:selectItem itemLabel="Private IP"/>
-					<f:selectItem itemLabel="Public IP"/>
-					<f:selectItem itemLabel="VM"/>
-					<f:selectItem itemLabel="Customer"/>
-					<f:selectItem itemLabel="Manager"/>
-					</p:selectOneRadio>
-				</p:outputPanel>
-			
-			
-		</h:form>
+	<h:form id="frmSearch">
+		<p:growl id="growlSearch" showDetail="true" />
+		<p:panel style="width: 50%; margin: 0 auto; border:none"
+			id="pnlSearchText">
+			<p:inputText style="width:400px; height: 20px;" required="true"
+				requiredMessage="Please enter name" tabindex="1" id="txtSearch" />
+			<p:watermark value="Search" for="txtSearch" />
+			<p:commandButton value="Submit" id="btnSearch"
+				style="margin-left:10px" onstart="PF('dlgShow').show()"
+				update="growlSearch"
+				oncomplete="PF('dlgShow').hide(),PF('pnlTblManagers').toggle()" />
+			<p:selectOneRadio>
+				<f:selectItem itemLabel="Private IP" />
+				<f:selectItem itemLabel="Public IP" />
+				<f:selectItem itemLabel="VM" />
+				<f:selectItem itemLabel="Customer" />
+				<f:selectItem itemLabel="Manager" />
+			</p:selectOneRadio>
+
+		</p:panel>
+
 		
+
+
+	</h:form>
+
 
 
 </ui:composition>
